package main

import (
	"context"
	"log"
	"net"
	"net/http"
	"os"
	"os/signal"
	"sync"
	"syscall"
	"time"

	"github.com/lancer2672/cinephile/main/config"
	"github.com/lancer2672/cinephile/main/internal/interface/grpc/pb"
	"google.golang.org/grpc"
	"google.golang.org/grpc/reflection"
)

type Server struct {
	pb.UnimplementedMainServiceServer
	config      *config.Config
	grpcServer  *grpc.Server
	httpServer  *http.Server
	shutdownCtx context.Context
	cancel      context.CancelFunc
}

func New(cfg *config.Config) *Server {
	ctx, cancel := context.WithCancel(context.Background())

	return &Server{
		config:      cfg,
		grpcServer:  grpc.NewServer(),
		shutdownCtx: ctx,
		cancel:      cancel,
	}
}

// Kh·ªüi ch·∫°y gRPC server
func (s *Server) runGrpcServer(wg *sync.WaitGroup) {
	defer wg.Done()

	listener, err := net.Listen("tcp", ":15002")
	if err != nil {
		log.Fatal("Error when creating gRPC listener:", err)
	}
	log.Printf("üöÄ gRPC server is running at %s", listener.Addr().String())

	// ƒêƒÉng k√Ω d·ªãch v·ª• gRPC
	pb.RegisterMainServiceServer(s.grpcServer, s)
	reflection.Register(s.grpcServer)

	// Ch·∫°y gRPC server
	if err := s.grpcServer.Serve(listener); err != nil {
		log.Fatal("Error running gRPC server:", err)
	}
}

// Ch·∫°y c·∫£ gRPC v√† HTTP server ƒë·ªìng th·ªùi
func (s *Server) Run() {
	var wg sync.WaitGroup
	wg.Add(1)

	go s.runGrpcServer(&wg)

	// L·∫Øng nghe t√≠n hi·ªáu shutdown
	s.handleShutdown()

	wg.Wait()
}

// L·∫Øng nghe t√≠n hi·ªáu ƒë·ªÉ shutdown server
func (s *Server) handleShutdown() {
	sigChan := make(chan os.Signal, 1)
	signal.Notify(sigChan, os.Interrupt, syscall.SIGTERM)

	<-sigChan
	log.Println("‚ö†Ô∏è Shutting down servers...")

	s.Shutdown()
}

// Shutdown c·∫£ gRPC v√† HTTP server
func (s *Server) Shutdown() {
	// ƒê√≥ng gRPC server
	log.Println("üõë Stopping gRPC server...")
	s.grpcServer.GracefulStop()

	// ƒê√≥ng HTTP server v·ªõi timeout
	log.Println("üõë Stopping HTTP server...")
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()

	if err := s.httpServer.Shutdown(ctx); err != nil {
		log.Println("Error shutting down HTTP server:", err)
	}

	// H·ªßy context
	s.cancel()
	log.Println("‚úÖ Server shutdown complete.")
}

func (s *Server) GetMovies(ctx context.Context, req *pb.GetMoviesRequest) (*pb.GetMoviesResponse, error) {
	return &pb.GetMoviesResponse{MovieId: req.MovieId}, nil
}
